--- a/frontend/src/app/modules/main-content-container/notifications/notifications.component.sass
+++ b/frontend/src/app/modules/main-content-container/notifications/notifications.component.sass
@@ -30,7 +30,6 @@ $menu-item-width: 300px
     padding: 0 5px
     background-color: $light-gray
     border: 1px solid darken($gray, 15%)
-    z-index: $mini-profile-z-index
     &:hover
         cursor: pointer
     .icon-background
@@ -38,6 +37,7 @@ $menu-item-width: 300px
         @extend %avatar
         +flex-container(center, center)
         i
+            transform: translate(0,-2px)
             font-size: 18px
             margin-right: 0
     .notifications
