--- a/frontend/src/app/modules/main-content-container/profile-menu/profile-menu.component.sass
+++ b/frontend/src/app/modules/main-content-container/profile-menu/profile-menu.component.sass
@@ -28,7 +28,6 @@ $image-size: 40px
     font-size: 18px
     background-color: $light-gray
     border: 1px solid darken($gray, 15%)
-    z-index: $mini-profile-z-index
     &:hover
         cursor: pointer
     .user-name
