--- a/frontend/src/app/modules/main/main-menu/main-menu.component.sass
+++ b/frontend/src/app/modules/main/main-menu/main-menu.component.sass
@@ -85,6 +85,7 @@ $left-padding: 30px
                     width: 200px !important
                     max-width: 200px !important
                     position: relative
+                    margin-left: 5px
                     span
                         grid-column: 1
                         display: inline
