--- a/frontend/src/app/modules/perflow-studio/left-side-menu/left-side-menu.component.sass
+++ b/frontend/src/app/modules/perflow-studio/left-side-menu/left-side-menu.component.sass
@@ -57,7 +57,7 @@ a
 .router-container
     margin-left: 247px
     height: 100%
-    overflow-y: scroll
+    padding-bottom: $song-toolbar-height
 
 
 .artist-groups
