--- a/frontend/src/app/modules/register/user-registration-form/user-registration-form/user-registration-form.component.sass
+++ b/frontend/src/app/modules/register/user-registration-form/user-registration-form/user-registration-form.component.sass
@@ -47,14 +47,6 @@ form
 .ui.error.message
     border-radius: 25px !important
 
-.btn-full
-    padding: 10px 55px 10px 55px
-    font-weight: $bold-weight
-    color: white
-    border: none
-    &:hover
-        color: black
-
 .social-media-buttons
     text-align: center
     .sphere
